// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasource/gradle-version getReleases calls configured registryUrls 1`] = `
Object {
  "homepage": "https://gradle.org",
  "releases": Array [
    Object {
      "releaseTimestamp": "2009-07-20T08:50:13+0200",
      "version": "0.7",
    },
    Object {
      "releaseTimestamp": "2009-09-28T14:01:59+0200",
      "version": "0.8",
    },
    Object {
      "releaseTimestamp": "2010-12-19T12:50:06+1100",
      "version": "0.9",
    },
    Object {
      "releaseTimestamp": "2011-01-02T11:40:57+1100",
      "version": "0.9.1",
    },
    Object {
      "releaseTimestamp": "2011-01-23T13:34:21+1100",
      "version": "0.9.2",
    },
    Object {
      "releaseTimestamp": "2012-06-12T02:56:21+0200",
      "version": "1.0",
    },
    Object {
      "releaseTimestamp": "2012-07-31T13:24:32+0000",
      "version": "1.1",
    },
    Object {
      "releaseTimestamp": "2012-09-12T10:46:02+0000",
      "version": "1.2",
    },
    Object {
      "releaseTimestamp": "2012-11-20T11:37:38+0000",
      "version": "1.3",
    },
    Object {
      "releaseTimestamp": "2013-01-28T03:42:46+0000",
      "version": "1.4",
    },
    Object {
      "releaseTimestamp": "2013-03-27T14:09:35+0000",
      "version": "1.5",
    },
    Object {
      "releaseTimestamp": "2013-05-07T09:12:14+0000",
      "version": "1.6",
    },
    Object {
      "releaseTimestamp": "2013-08-06T11:19:56+0000",
      "version": "1.7",
    },
    Object {
      "releaseTimestamp": "2013-09-24T07:32:33+0000",
      "version": "1.8",
    },
    Object {
      "releaseTimestamp": "2013-11-19T08:20:02+0000",
      "version": "1.9",
    },
    Object {
      "releaseTimestamp": "2013-12-17T09:28:15+0000",
      "version": "1.10",
    },
    Object {
      "releaseTimestamp": "2014-02-11T11:34:39+0000",
      "version": "1.11",
    },
    Object {
      "releaseTimestamp": "2014-04-29T09:24:31+0000",
      "version": "1.12",
    },
    Object {
      "releaseTimestamp": "2014-07-01T07:45:34+0000",
      "version": "2.0",
    },
    Object {
      "releaseTimestamp": "2014-09-08T10:40:39+0000",
      "version": "2.1",
    },
    Object {
      "releaseTimestamp": "2014-11-10T13:31:44+0000",
      "version": "2.2",
    },
    Object {
      "releaseTimestamp": "2014-11-24T09:45:35+0000",
      "version": "2.2.1",
    },
    Object {
      "releaseTimestamp": "2015-02-16T05:09:33+0000",
      "version": "2.3",
    },
    Object {
      "releaseTimestamp": "2015-05-05T08:09:24+0000",
      "version": "2.4",
    },
    Object {
      "releaseTimestamp": "2015-07-08T07:38:37+0000",
      "version": "2.5",
    },
    Object {
      "releaseTimestamp": "2015-08-10T13:15:06+0000",
      "version": "2.6",
    },
    Object {
      "releaseTimestamp": "2015-09-14T07:26:16+0000",
      "version": "2.7",
    },
    Object {
      "releaseTimestamp": "2015-10-20T03:46:36+0000",
      "version": "2.8",
    },
    Object {
      "releaseTimestamp": "2015-11-17T07:02:17+0000",
      "version": "2.9",
    },
    Object {
      "releaseTimestamp": "2015-12-21T21:15:04+0000",
      "version": "2.10",
    },
    Object {
      "releaseTimestamp": "2016-02-08T07:59:16+0000",
      "version": "2.11",
    },
    Object {
      "releaseTimestamp": "2016-03-14T08:32:03+0000",
      "version": "2.12",
    },
    Object {
      "releaseTimestamp": "2016-04-25T04:10:10+0000",
      "version": "2.13",
    },
    Object {
      "releaseTimestamp": "2016-06-14T07:16:37+0000",
      "version": "2.14",
    },
    Object {
      "releaseTimestamp": "2016-07-18T06:38:37+0000",
      "version": "2.14.1",
    },
    Object {
      "releaseTimestamp": "2016-08-15T13:15:01+0000",
      "version": "3.0",
    },
    Object {
      "releaseTimestamp": "2016-09-19T10:53:53+0000",
      "version": "3.1",
    },
    Object {
      "releaseTimestamp": "2016-11-14T12:32:59+0000",
      "version": "3.2",
    },
    Object {
      "releaseTimestamp": "2016-11-22T15:19:54+0000",
      "version": "3.2.1",
    },
    Object {
      "releaseTimestamp": "2017-01-03T15:31:04+0000",
      "version": "3.3",
    },
    Object {
      "releaseTimestamp": "2017-02-20T14:49:26+0000",
      "version": "3.4",
    },
    Object {
      "releaseTimestamp": "2017-03-03T19:45:41+0000",
      "version": "3.4.1",
    },
    Object {
      "releaseTimestamp": "2017-04-10T13:37:25+0000",
      "version": "3.5",
    },
    Object {
      "releaseTimestamp": "2017-06-16T14:36:27+0000",
      "version": "3.5.1",
    },
    Object {
      "releaseTimestamp": "2017-06-14T15:11:08+0000",
      "version": "4.0",
    },
    Object {
      "releaseTimestamp": "2017-07-07T14:02:41+0000",
      "version": "4.0.1",
    },
    Object {
      "releaseTimestamp": "2017-07-26T16:19:18+0000",
      "version": "4.0.2",
    },
    Object {
      "releaseTimestamp": "2017-08-07T14:38:48+0000",
      "version": "4.1",
    },
    Object {
      "releaseTimestamp": "2017-09-20T14:48:23+0000",
      "version": "4.2",
    },
    Object {
      "releaseTimestamp": "2017-10-02T15:36:21+0000",
      "version": "4.2.1",
    },
    Object {
      "releaseTimestamp": "2017-10-30T15:43:29+0000",
      "version": "4.3",
    },
    Object {
      "releaseTimestamp": "2017-11-08T08:59:45+0000",
      "version": "4.3.1",
    },
    Object {
      "releaseTimestamp": "2017-12-06T09:05:06+0000",
      "version": "4.4",
    },
    Object {
      "releaseTimestamp": "2017-12-20T15:45:23+0000",
      "version": "4.4.1",
    },
    Object {
      "releaseTimestamp": "2018-01-24T17:04:52+0000",
      "version": "4.5",
    },
    Object {
      "releaseTimestamp": "2018-02-05T13:22:49+0000",
      "version": "4.5.1",
    },
    Object {
      "releaseTimestamp": "2018-02-28T13:36:36+0000",
      "version": "4.6",
    },
    Object {
      "releaseTimestamp": "2018-04-18T09:09:12+0000",
      "version": "4.7",
    },
    Object {
      "releaseTimestamp": "2018-06-04T10:39:58+0000",
      "version": "4.8",
    },
    Object {
      "releaseTimestamp": "2018-06-21T07:53:06+0000",
      "version": "4.8.1",
    },
    Object {
      "releaseTimestamp": "2018-07-16T08:14:03+0000",
      "version": "4.9",
    },
    Object {
      "releaseTimestamp": "2018-08-27T18:35:06+0000",
      "version": "4.10",
    },
    Object {
      "releaseTimestamp": "2018-09-12T11:33:27+0000",
      "version": "4.10.1",
    },
    Object {
      "releaseTimestamp": "2018-09-19T18:10:15+0000",
      "version": "4.10.2",
    },
    Object {
      "releaseTimestamp": null,
      "version": "4.10.3",
    },
    Object {
      "releaseTimestamp": null,
      "version": "5.0",
    },
  ],
  "sourceUrl": "https://github.com/gradle/gradle",
}
`;

exports[`datasource/gradle-version getReleases calls configured registryUrls 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "host": "foo.bar",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://foo.bar/",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "host": "baz.qux",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "http://baz.qux/",
  },
]
`;

exports[`datasource/gradle-version getReleases processes real data 1`] = `
Object {
  "homepage": "https://gradle.org",
  "releases": Array [
    Object {
      "releaseTimestamp": "2009-07-20T08:50:13+0200",
      "version": "0.7",
    },
    Object {
      "releaseTimestamp": "2009-09-28T14:01:59+0200",
      "version": "0.8",
    },
    Object {
      "releaseTimestamp": "2010-12-19T12:50:06+1100",
      "version": "0.9",
    },
    Object {
      "releaseTimestamp": "2011-01-02T11:40:57+1100",
      "version": "0.9.1",
    },
    Object {
      "releaseTimestamp": "2011-01-23T13:34:21+1100",
      "version": "0.9.2",
    },
    Object {
      "releaseTimestamp": "2012-06-12T02:56:21+0200",
      "version": "1.0",
    },
    Object {
      "releaseTimestamp": "2012-07-31T13:24:32+0000",
      "version": "1.1",
    },
    Object {
      "releaseTimestamp": "2012-09-12T10:46:02+0000",
      "version": "1.2",
    },
    Object {
      "releaseTimestamp": "2012-11-20T11:37:38+0000",
      "version": "1.3",
    },
    Object {
      "releaseTimestamp": "2013-01-28T03:42:46+0000",
      "version": "1.4",
    },
    Object {
      "releaseTimestamp": "2013-03-27T14:09:35+0000",
      "version": "1.5",
    },
    Object {
      "releaseTimestamp": "2013-05-07T09:12:14+0000",
      "version": "1.6",
    },
    Object {
      "releaseTimestamp": "2013-08-06T11:19:56+0000",
      "version": "1.7",
    },
    Object {
      "releaseTimestamp": "2013-09-24T07:32:33+0000",
      "version": "1.8",
    },
    Object {
      "releaseTimestamp": "2013-11-19T08:20:02+0000",
      "version": "1.9",
    },
    Object {
      "releaseTimestamp": "2013-12-17T09:28:15+0000",
      "version": "1.10",
    },
    Object {
      "releaseTimestamp": "2014-02-11T11:34:39+0000",
      "version": "1.11",
    },
    Object {
      "releaseTimestamp": "2014-04-29T09:24:31+0000",
      "version": "1.12",
    },
    Object {
      "releaseTimestamp": "2014-07-01T07:45:34+0000",
      "version": "2.0",
    },
    Object {
      "releaseTimestamp": "2014-09-08T10:40:39+0000",
      "version": "2.1",
    },
    Object {
      "releaseTimestamp": "2014-11-10T13:31:44+0000",
      "version": "2.2",
    },
    Object {
      "releaseTimestamp": "2014-11-24T09:45:35+0000",
      "version": "2.2.1",
    },
    Object {
      "releaseTimestamp": "2015-02-16T05:09:33+0000",
      "version": "2.3",
    },
    Object {
      "releaseTimestamp": "2015-05-05T08:09:24+0000",
      "version": "2.4",
    },
    Object {
      "releaseTimestamp": "2015-07-08T07:38:37+0000",
      "version": "2.5",
    },
    Object {
      "releaseTimestamp": "2015-08-10T13:15:06+0000",
      "version": "2.6",
    },
    Object {
      "releaseTimestamp": "2015-09-14T07:26:16+0000",
      "version": "2.7",
    },
    Object {
      "releaseTimestamp": "2015-10-20T03:46:36+0000",
      "version": "2.8",
    },
    Object {
      "releaseTimestamp": "2015-11-17T07:02:17+0000",
      "version": "2.9",
    },
    Object {
      "releaseTimestamp": "2015-12-21T21:15:04+0000",
      "version": "2.10",
    },
    Object {
      "releaseTimestamp": "2016-02-08T07:59:16+0000",
      "version": "2.11",
    },
    Object {
      "releaseTimestamp": "2016-03-14T08:32:03+0000",
      "version": "2.12",
    },
    Object {
      "releaseTimestamp": "2016-04-25T04:10:10+0000",
      "version": "2.13",
    },
    Object {
      "releaseTimestamp": "2016-06-14T07:16:37+0000",
      "version": "2.14",
    },
    Object {
      "releaseTimestamp": "2016-07-18T06:38:37+0000",
      "version": "2.14.1",
    },
    Object {
      "releaseTimestamp": "2016-08-15T13:15:01+0000",
      "version": "3.0",
    },
    Object {
      "releaseTimestamp": "2016-09-19T10:53:53+0000",
      "version": "3.1",
    },
    Object {
      "releaseTimestamp": "2016-11-14T12:32:59+0000",
      "version": "3.2",
    },
    Object {
      "releaseTimestamp": "2016-11-22T15:19:54+0000",
      "version": "3.2.1",
    },
    Object {
      "releaseTimestamp": "2017-01-03T15:31:04+0000",
      "version": "3.3",
    },
    Object {
      "releaseTimestamp": "2017-02-20T14:49:26+0000",
      "version": "3.4",
    },
    Object {
      "releaseTimestamp": "2017-03-03T19:45:41+0000",
      "version": "3.4.1",
    },
    Object {
      "releaseTimestamp": "2017-04-10T13:37:25+0000",
      "version": "3.5",
    },
    Object {
      "releaseTimestamp": "2017-06-16T14:36:27+0000",
      "version": "3.5.1",
    },
    Object {
      "releaseTimestamp": "2017-06-14T15:11:08+0000",
      "version": "4.0",
    },
    Object {
      "releaseTimestamp": "2017-07-07T14:02:41+0000",
      "version": "4.0.1",
    },
    Object {
      "releaseTimestamp": "2017-07-26T16:19:18+0000",
      "version": "4.0.2",
    },
    Object {
      "releaseTimestamp": "2017-08-07T14:38:48+0000",
      "version": "4.1",
    },
    Object {
      "releaseTimestamp": "2017-09-20T14:48:23+0000",
      "version": "4.2",
    },
    Object {
      "releaseTimestamp": "2017-10-02T15:36:21+0000",
      "version": "4.2.1",
    },
    Object {
      "releaseTimestamp": "2017-10-30T15:43:29+0000",
      "version": "4.3",
    },
    Object {
      "releaseTimestamp": "2017-11-08T08:59:45+0000",
      "version": "4.3.1",
    },
    Object {
      "releaseTimestamp": "2017-12-06T09:05:06+0000",
      "version": "4.4",
    },
    Object {
      "releaseTimestamp": "2017-12-20T15:45:23+0000",
      "version": "4.4.1",
    },
    Object {
      "releaseTimestamp": "2018-01-24T17:04:52+0000",
      "version": "4.5",
    },
    Object {
      "releaseTimestamp": "2018-02-05T13:22:49+0000",
      "version": "4.5.1",
    },
    Object {
      "releaseTimestamp": "2018-02-28T13:36:36+0000",
      "version": "4.6",
    },
    Object {
      "releaseTimestamp": "2018-04-18T09:09:12+0000",
      "version": "4.7",
    },
    Object {
      "releaseTimestamp": "2018-06-04T10:39:58+0000",
      "version": "4.8",
    },
    Object {
      "releaseTimestamp": "2018-06-21T07:53:06+0000",
      "version": "4.8.1",
    },
    Object {
      "releaseTimestamp": "2018-07-16T08:14:03+0000",
      "version": "4.9",
    },
    Object {
      "releaseTimestamp": "2018-08-27T18:35:06+0000",
      "version": "4.10",
    },
    Object {
      "releaseTimestamp": "2018-09-12T11:33:27+0000",
      "version": "4.10.1",
    },
    Object {
      "releaseTimestamp": "2018-09-19T18:10:15+0000",
      "version": "4.10.2",
    },
    Object {
      "releaseTimestamp": null,
      "version": "4.10.3",
    },
    Object {
      "releaseTimestamp": null,
      "version": "5.0",
    },
  ],
  "sourceUrl": "https://github.com/gradle/gradle",
}
`;

exports[`datasource/gradle-version getReleases processes real data 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "host": "services.gradle.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://services.gradle.org/versions/all",
  },
]
`;
